--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;800;900&display=swap');
+
 *
 {
     margin: 0;
@@ -12,10 +14,31 @@ body
     background: rgb(24, 24, 24);
 }
 
+body {
+    overflow-x: hidden;
+}
+
 .webgl
 {
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     outline: none;
+    mix-blend-mode: exclusion;
+}
+
+.container {
+    display: grid;
+    height: 100vh;
+    place-items: center;
+}
+
+h1 {
+    color: #fff;
+    font-size: 8rem;
+    text-transform: uppercase;
+}
+
+section {
+    height: 100vh;
 }
